<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerEventCreation">


    <TextView
        android:id="@+id/lbEvenCreate"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="sans-serif"
        android:text="@string/lbEventCreate"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btnEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEvent"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnTicket"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAccount"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvVersion"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="353dp"
        android:layout_height="146dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/lbUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbEvenCreate"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageEventCreate"
            android:layout_width="145dp"
            android:layout_height="143dp"
            android:background="#F44336"
            android:baseline="@dimen/cardview_default_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="39dp"
            android:src="@drawable/upload"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEvnImgUpload"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ExtraText,UseAppTint" />

        <TextView
            android:id="@+id/btnEvnImgUpload"
            android:layout_width="79dp"
            android:layout_height="52dp"
            android:layout_marginEnd="36dp"
            android:paddingStart="8dp"
            android:text="@string/btnUpload"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lbUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="15dp"
        android:text="@string/lbEventName"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/lbEventLocation"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edEventLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbUserName" />

    <TextView
        android:id="@+id/lbEventSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="78dp"
        android:text="@string/lbEventDate"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvEventDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbUserEmail" />

    <EditText
        android:id="@+id/edEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/lbEnter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbUserName"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/lbEnter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEventName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edEventFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/lbEnter"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/lbEventDescription"
        app:layout_constraintStart_toStartOf="@+id/tvEventTime"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/logout"
            android:tint="@color/black"
            tools:ignore="ExtraText,UseAppTint" />

        <TextView
            android:id="@+id/btnEventCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/btnCreate"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbEnter"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/lbEventDescription"
        app:layout_constraintStart_toStartOf="@+id/spEventReminder"
        app:layout_constraintTop_toBottomOf="@+id/lbEventDescription"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lbEventFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lbEventFee"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lbEventTime"
        app:layout_constraintTop_toBottomOf="@+id/lbEventTime" />

    <EditText
        android:id="@+id/edEventSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbEnter"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/spEventReminder"
        app:layout_constraintTop_toBottomOf="@+id/spEventReminder"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lbEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lbEventDescription"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lbEventFee"
        app:layout_constraintTop_toBottomOf="@+id/lbEventFee" />

    <TextView
        android:id="@+id/lbEventSeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lbEventSeats"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lbEventReminder"
        app:layout_constraintTop_toBottomOf="@+id/lbEventReminder" />

    <TextView
        android:id="@+id/lbEventReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/lbEventReminder"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lbEventDescription"
        app:layout_constraintTop_toBottomOf="@+id/lbEventDescription" />

    <TextView
        android:id="@+id/lbEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="74dp"
        android:text="@string/lbEventTime"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tvEventTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbEventSchedule" />

    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="45dp"
        android:hint="@string/lbEnter"
        app:layout_constraintBottom_toTopOf="@+id/edEventFee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbEventSchedule"
        app:layout_constraintTop_toTopOf="@+id/edEventLocation" />

    <TextView
        android:id="@+id/tvEventTime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="137dp"
        app:layout_constraintBottom_toBottomOf="@+id/spEventReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbEventTime"
        app:layout_constraintTop_toTopOf="@+id/edEventName" />

    <Spinner
        android:id="@+id/spEventReminder"
        android:layout_width="211dp"
        android:layout_height="51dp"
        android:layout_marginStart="18dp"
        android:entries="@array/spEventReminder"
        app:layout_constraintBottom_toBottomOf="@+id/lbEventReminder"
        app:layout_constraintStart_toEndOf="@+id/lbEventDescription"
        app:layout_constraintTop_toBottomOf="@+id/lbEventReminder" />


</androidx.constraintlayout.widget.ConstraintLayout>