<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OrganizerViewListAttendee">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginTop="148dp"
        android:fontFamily="sans-serif"
        android:text="@string/lbAttendeeList"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="31dp"
            android:src="@drawable/turnback"
            android:tint="@color/black"
            tools:ignore="ExtraText,UseAppTint" />

        <TextView
            android:id="@+id/btnGoBack"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:paddingStart="8dp"
            android:text="@string/btnBack"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="96dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974">

        <Button
            android:id="@+id/btnEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEvent"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnTicket"
            tools:ignore="TouchTargetSizeCheck" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAccount"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/tvVersion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="350dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06">

        <TextView
            android:id="@+id/tvAttendeeCount"
            android:layout_width="162dp"
            android:layout_height="31dp"
            android:layout_marginEnd="180dp"
            android:text="@string/tvActive"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.761" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="329dp"
            android:layout_height="37dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tvName"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.229" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAttendeeList"
        android:layout_width="397dp"
        android:layout_height="373dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="ORG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>